# RFantibody

./: .gitignore  pyproject.toml
scripts/: rf2_predict.py
scripts/scoring/: minterface.py  quiver.py  util_minterface.xml
src/rfantibody/proteinmpnn/model/: protein_mpnn_run.py
src/rfantibody/rf2/modules/: model_runner.py
src/rfantibody/rf2/network/: loss.py
src/rfantibody/rfdiffusion/: diff_util.py  diffusion.py  parsers.py
src/rfantibody/rfdiffusion/inference/: ab_pose.py  model_runners.py  utils.py
src/rfantibody/rfdiffusion/potentials/: manager.py  potentials.py
