[project]
name = "rfantibody"
version = "1.0.0"
description = "Structure-Based de novo Antibody Design"
authors = [
    { name = "Nate Bennett", email = "nrbennett2@gmail.com" },
    { name = "Joe Watchwell", email = "joe.watchwell@gmail.com" },
]
requires-python = "==3.10.*"
readme = "README.md"
dependencies = [
    "torch==2.3.*",
    # "torchaudio",
    # "torchvision",
    "torch-utils",
    "numpy==1.*",
    "cuda-python==11.8",
    "hydra-core",
    "icecream",
    "opt-einsum",
    "dgl",
    "e3nn",
    "pyrsistent",
    "biotite>=1.2.0",
]

[dependency-groups]
test = ["pytest>=8.0.0,<9", "pandas"]

[tool.uv]
default-groups = ["test"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
dgl = { path = "include/dgl/dgl-2.4.0+cu118-cp310-cp310-manylinux1_x86_64.whl" }

# [tool.hatch.build.targets.sdist]
# include = [
#     "src/rfantibody",

#     "include",
#     "include/SE3Transformer/se3_transformer",
# ]

# [tool.hatch.build.targets.wheel]
# include = [
#     "src/rfantibody",
#     "include",
#     "include/SE3Transformer/se3_transformer",
# ]

# [tool.hatch.build.targets.wheel.sources]
# "src/rfantibody" = "rfantibody"
# "include/SE3Transformer/se3_transformer" = "se3_transformer"
[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
